[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.21"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
