[package]
name = "webrtc-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
config = "0.13.3"
futures = "0.3.28"
once_cell = "1.18.0"
retina = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.22"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time"] }
url = "2.4.0"
uuid = { version = "1.3.4", features = ["v4"] }
webrtc = "0.7.3"

[dev-dependencies]
rusty-hook = "^0.11.2"
